cabal-version: 3.0
name: reverse-list
version: 0.1.0
-- synopsis: 
-- description:
category: Data
homepage: https://github.com/Okuno Zankoku/reverse-list
bug-reports: https://github.com/Okuno Zankoku/reverse-list/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.List.Reverse
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , containers >=0.6
    , contiguous >= 0.6
    , deepseq >=1.4
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , reverse-list
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2
