cabal-version: 3.0
name: reverse-list
version: 0.2.0
-- synopsis: 
-- description:
category: Data
homepage: https://github.com/edemko/reverse-list
bug-reports: https://github.com/edemko/reverse-list/issues
author: Eric Demko
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Eric Demko
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.List.Cons
    Data.List.Snoc
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , containers >=0.6
    , contiguous >= 0.6
    , deepseq >=1.4
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wunticked-promoted-constructors
